--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .header {
-  height: 90vh;
+  height: 95vh;
   background-image: linear-gradient(
     to right bottom,
     rgb(0, 84, 135, 0.4),
@@ -23,5 +23,45 @@ body {
   background-size: cover;
   background-position: top;
 
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 10% 100%, 0 90%);
+  position: relative;
 }
+
+.logo-box {
+  position: absolute;
+  left: 40px;
+  top: 40px;
+}
+
+.logo {
+  height: 30px;
+}
+
+.heading-primary {
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+}
+
+.text-box {
+  color: rgb(218,169,0);
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.heading-primary-main {
+  display: block;
+  font-weight: 700;
+  font-size: 50px;
+  letter-spacing: 30px;
+}
+
+.heading-primary-sub {
+  display: block;
+  font-weight: 400;
+  font-size: 20px;
+  letter-spacing: 17px;
+}
+
+
