Add animations to main heading

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
   left: 50%;
   top: 40%;
   transform: translate(-50%, -50%);
+  backface-visibility: hidden;
 }
 
 .text-box {
@@ -55,6 +56,8 @@ body {
   font-weight: 700;
   font-size: 50px;
   letter-spacing: 30px;
+
+  animation: moveInRight 1s ease-out 2s;
 }
 
 .heading-primary-sub {
@@ -62,6 +65,18 @@ body {
   font-weight: 400;
   font-size: 20px;
   letter-spacing: 17px;
+
+  animation: moveInLeft 1s ease-out 2s;
 }
 
+@keyframes moveInRight {
+  0% { transform: translateX(-80px); }
+  80% { transform: translateX(15px); }
+  100% { transform: translateX(0); }
+}
 
+@keyframes moveInLeft {
+  0% { transform: translateX(80px); }
+  80% { transform: translateX(-15px); }
+  100% { transform: translateX(0); }
+}
