--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,30 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.7;
   color: #777;
-  padding: 30px;
+  padding: 3rem;
+  box-sizing: border-box;
 }
 
 .header {
   height: 95vh;
   background-image: linear-gradient(
     to right bottom,
-    rgb(0, 84, 135, 0.4),
+    rgb(0, 84, 135, .4),
     rgb(0, 40, 86, 0.6)),
   url('../img/earth-hero.jpg');
   background-size: cover;
@@ -29,18 +36,18 @@ body {
 
 .logo-box {
   position: absolute;
-  left: 40px;
-  top: 40px;
+  left: 4rem;
+  top: 4rem;
 }
 
 .logo {
-  height: 30px;
+  height: 3rem;
 }
 
 .heading-primary {
   backface-visibility: hidden;
   color: rgb(218,169,0);
-  margin-bottom: 50px;
+  margin-bottom: 5rem;
   text-transform: uppercase;
 }
 
@@ -56,8 +63,8 @@ body {
 .heading-primary-main {
   display: block;
   font-weight: 700;
-  font-size: 50px;
-  letter-spacing: 30px;
+  font-size: 5rem;
+  letter-spacing: 3rem;
 
   animation: moveInRight 1s ease-out 2s;
 }
@@ -65,27 +72,27 @@ body {
 .heading-primary-sub {
   display: block;
   font-weight: 400;
-  font-size: 20px;
-  letter-spacing: 17px;
+  font-size: 2rem;
+  letter-spacing: 1.7rem;
 
   animation: moveInLeft 1s ease-out 2s;
 }
 
 @keyframes moveInRight {
-  0% { transform: translateX(-80px); }
-  80% { transform: translateX(15px); }
+  0% { transform: translateX(-8rem); }
+  80% { transform: translateX(1.5rem); }
   100% { transform: translateX(0); }
 }
 
 @keyframes moveInLeft {
-  0% { transform: translateX(80px); }
-  80% { transform: translateX(-15px); }
+  0% { transform: translateX(8rem); }
+  80% { transform: translateX(-1.5rem); }
   100% { transform: translateX(0); }
 }
 
 @keyframes moveInBottom {
   0% { 
-    transform: translateY(40px);
+    transform: translateY(4rem);
     opacity: 0;
   }
   100% {
@@ -97,9 +104,10 @@ body {
 .btn:link,
 .btn:visited {
   backface-visibility: hidden;
-  border-radius: 100px;
+  border-radius: 10rem;
   color: #555;
-  padding: 10px 60px;
+  font-size: 1.6rem;
+  padding: 1rem 6rem;
   display: inline-block;
   text-decoration: none;
   text-transform: uppercase;
@@ -112,18 +120,18 @@ body {
 }
 
 .btn:hover {
-  box-shadow: 0 10px 20px #002856;
-  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem #002856;
+  transform: translateY(-.3rem);
 }
 .btn:active {
-  box-shadow: 0 10px 10px #002856;
-  transform: translateY(-1px);
+  box-shadow: 0 1rem 1rem #002856;
+  transform: translateY(-.1rem);
 }
 
 .btn::after {
   content: '';
   height: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   display: inline-block;
   position: absolute;
   width: 100%;
