--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@ body {
   position: relative;
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   left: 4rem;
   top: 4rem;
 }
 
-.logo {
+.header__logo {
   height: 3rem;
 }
 
@@ -60,7 +60,7 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-weight: 700;
   font-size: 5rem;
@@ -69,7 +69,7 @@ body {
   animation: moveInRight 1s ease-out 2s;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-weight: 400;
   font-size: 2rem;
@@ -115,7 +115,7 @@ body {
   position: relative;
 }
 
-.btn-yellow {
+.btn--yellow {
   background-color: rgb(218,169,0);
 }
 
@@ -141,7 +141,7 @@ body {
   z-index: -1;
 }
 
-.btn-yellow::after {
+.btn--yellow::after {
   background-color: rgb(218,169,0);
 }
 
@@ -150,7 +150,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 1s ease-out .75s;
   animation-fill-mode: backwards;
 }
