--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,43 +1,60 @@
+$color-primary: rgb(0,145,179);
+$color-primary-light: rgb(0,84,135);
+$color-primary-dark: rgb(0,40,86);
+$color-gray-dark: #777;
+
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
-  color: #777;
+  color: $color-gray-dark;
   padding: 3rem;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(0, 84, 135, 0.4), rgba(0, 40, 86, 0.6)), url("../img/earth-hero.jpg");
+  background-image: linear-gradient(
+    to right bottom,
+    rgba($color-primary-light, .4),
+    rgba($color-primary-dark, .6)),
+  url('../img/earth-hero.jpg');
   background-size: cover;
   background-position: top;
+
   clip-path: polygon(0 0, 100% 0, 100% 90%, 10% 100%, 0 90%);
-  position: relative; }
+  position: relative;
+}
 
 .header__logo-box {
   position: absolute;
   left: 4rem;
-  top: 4rem; }
+  top: 4rem;
+}
 
 .header__logo {
-  height: 3rem; }
+  height: 3rem;
+}
 
 .heading-primary {
   backface-visibility: hidden;
-  color: #daa900;
+  color: rgb(218,169,0);
   margin-bottom: 5rem;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .text-box {
   position: relative;
@@ -45,69 +62,76 @@ body {
   position: absolute;
   text-align: center;
   top: 40%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+}
 
 .heading-primary--main {
   display: block;
   font-weight: 700;
   font-size: 5rem;
   letter-spacing: 3rem;
-  animation: moveInRight 1s ease-out 2s; }
+
+  animation: moveInRight 1s ease-out 2s;
+}
 
 .heading-primary--sub {
   display: block;
   font-weight: 400;
   font-size: 2rem;
   letter-spacing: 1.7rem;
-  animation: moveInLeft 1s ease-out 2s; }
+
+  animation: moveInLeft 1s ease-out 2s;
+}
 
 @keyframes moveInRight {
-  0% {
-    transform: translateX(-8rem); }
-  80% {
-    transform: translateX(1.5rem); }
-  100% {
-    transform: translateX(0); } }
+  0% { transform: translateX(-8rem); }
+  80% { transform: translateX(1.5rem); }
+  100% { transform: translateX(0); }
+}
 
 @keyframes moveInLeft {
-  0% {
-    transform: translateX(8rem); }
-  80% {
-    transform: translateX(-1.5rem); }
-  100% {
-    transform: translateX(0); } }
+  0% { transform: translateX(8rem); }
+  80% { transform: translateX(-1.5rem); }
+  100% { transform: translateX(0); }
+}
 
 @keyframes moveInBottom {
-  0% {
+  0% { 
     transform: translateY(4rem);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
     transform: translateY(0);
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
 
 .btn:link,
 .btn:visited {
   backface-visibility: hidden;
   border-radius: 10rem;
-  color: #777;
+  color: $color-gray-dark;
   font-size: 1.6rem;
   padding: 1rem 6rem;
   display: inline-block;
   text-decoration: none;
   text-transform: uppercase;
   transition: all .2s;
-  position: relative; }
+  position: relative;
+}
 
 .btn--yellow {
-  background-color: #daa900; }
+  background-color: rgb(218,169,0);
+}
 
 .btn:hover {
-  box-shadow: 0 1rem 2rem #002856;
-  transform: translateY(-0.3rem); }
-
+  box-shadow: 0 1rem 2rem $color-primary-dark;
+  transform: translateY(-.3rem);
+}
 .btn:active {
-  box-shadow: 0 1rem 1rem #002856;
-  transform: translateY(-0.1rem); }
+  box-shadow: 0 1rem 1rem $color-primary-dark;
+  transform: translateY(-.1rem);
+}
 
 .btn::after {
   content: '';
@@ -119,15 +143,19 @@ body {
   top: 0;
   transition: all .4s;
   left: 0;
-  z-index: -1; }
+  z-index: -1;
+}
 
 .btn--yellow::after {
-  background-color: #daa900; }
+  background-color: rgb(218,169,0);
+}
 
 .btn:hover::after {
   transform: scaleX(1.6) scaleY(2);
-  opacity: 0; }
+  opacity: 0;
+}
 
 .btn--animated {
   animation: moveInBottom 1s ease-out .75s;
-  animation-fill-mode: backwards; }
+  animation-fill-mode: backwards;
+}
