--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@ $color-primary: rgb(0,145,179);
 $color-primary-light: rgb(0,84,135);
 $color-primary-dark: rgb(0,40,86);
 $color-gray-dark: #777;
+$color-yellow: #FFBF3C;
+$color-yellow-dark: rgb(217,169,0);
 
 *,
 *::after,
@@ -37,23 +39,42 @@ body {
 
   clip-path: polygon(0 0, 100% 0, 100% 90%, 10% 100%, 0 90%);
   position: relative;
+
+  &__logo-box {
+    position: absolute;
+    left: 4rem;
+    top: 4rem;
+  }
+
+  &__logo {
+    height: 3rem;
+  }
 }
 
-.header__logo-box {
-  position: absolute;
-  left: 4rem;
-  top: 4rem;
-}
-
-.header__logo {
-  height: 3rem;
-}
 
 .heading-primary {
   backface-visibility: hidden;
-  color: rgb(218,169,0);
+  color: $color-yellow-dark;
   margin-bottom: 5rem;
   text-transform: uppercase;
+
+  &--main {
+    display: block;
+    font-weight: 700;
+    font-size: 5rem;
+    letter-spacing: 3rem;
+
+    animation: moveInRight 1s ease-out 2s;
+  }
+
+  &--sub {
+    display: block;
+    font-weight: 400;
+    font-size: 2rem;
+    letter-spacing: 1.7rem;
+
+    animation: moveInLeft 1s ease-out 2s;
+  }
 }
 
 .text-box {
@@ -63,24 +84,6 @@ body {
   text-align: center;
   top: 40%;
   transform: translate(-50%, -50%);
-}
-
-.heading-primary--main {
-  display: block;
-  font-weight: 700;
-  font-size: 5rem;
-  letter-spacing: 3rem;
-
-  animation: moveInRight 1s ease-out 2s;
-}
-
-.heading-primary--sub {
-  display: block;
-  font-weight: 400;
-  font-size: 2rem;
-  letter-spacing: 1.7rem;
-
-  animation: moveInLeft 1s ease-out 2s;
 }
 
 @keyframes moveInRight {
@@ -106,56 +109,58 @@ body {
   }
 }
 
-.btn:link,
-.btn:visited {
-  backface-visibility: hidden;
-  border-radius: 10rem;
-  color: $color-gray-dark;
-  font-size: 1.6rem;
-  padding: 1rem 6rem;
-  display: inline-block;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: all .2s;
-  position: relative;
+.btn {
+  &:link,
+  &:visited {
+    backface-visibility: hidden;
+    border-radius: 10rem;
+    color: $color-gray-dark;
+    font-size: 1.6rem;
+    padding: 1rem 6rem;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .2s;
+    position: relative;
+  }
+
+  &:hover {
+    box-shadow: 0 1rem 2rem $color-primary-dark;
+    transform: translateY(-.3rem);
+    &::after {
+      transform: scaleX(1.6) scaleY(2);
+      opacity: 0;
+    }
+  }
+
+  &:active {
+    box-shadow: 0 1rem 1rem $color-primary-dark;
+    transform: translateY(-.1rem);
+  }
+
+  &::after {
+    content: '';
+    height: 100%;
+    border-radius: 10rem;
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    transition: all .4s;
+    left: 0;
+    z-index: -1;
+  }
+
+  &--yellow {
+    background-color: $color-yellow-dark;
+    &::after {
+      background-color: $color-yellow-dark;
+    }
+  }
+
+  &--animated {
+    animation: moveInBottom 1s ease-out .75s;
+    animation-fill-mode: backwards;
+  }
 }
 
-.btn--yellow {
-  background-color: rgb(218,169,0);
-}
-
-.btn:hover {
-  box-shadow: 0 1rem 2rem $color-primary-dark;
-  transform: translateY(-.3rem);
-}
-.btn:active {
-  box-shadow: 0 1rem 1rem $color-primary-dark;
-  transform: translateY(-.1rem);
-}
-
-.btn::after {
-  content: '';
-  height: 100%;
-  border-radius: 10rem;
-  display: inline-block;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  transition: all .4s;
-  left: 0;
-  z-index: -1;
-}
-
-.btn--yellow::after {
-  background-color: rgb(218,169,0);
-}
-
-.btn:hover::after {
-  transform: scaleX(1.6) scaleY(2);
-  opacity: 0;
-}
-
-.btn--animated {
-  animation: moveInBottom 1s ease-out .75s;
-  animation-fill-mode: backwards;
-}
