--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,166 +1,15 @@
-$color-primary: rgb(0,145,179);
-$color-primary-light: rgb(0,84,135);
-$color-primary-dark: rgb(0,40,86);
-$color-gray-dark: #777;
-$color-yellow: #FFBF3C;
-$color-yellow-dark: rgb(217,169,0);
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
-html {
-  font-size: 62.5%;
-}
+@import "components/button";
 
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  /* font-size: 16px; */
-  line-height: 1.7;
-  color: $color-gray-dark;
-  padding: 3rem;
-  box-sizing: border-box;
-}
+@import "layout/header";
 
-.header {
-  height: 95vh;
-  background-image: linear-gradient(
-    to right bottom,
-    rgba($color-primary-light, .4),
-    rgba($color-primary-dark, .6)),
-  url('../img/earth-hero.jpg');
-  background-size: cover;
-  background-position: top;
-
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 10% 100%, 0 90%);
-  position: relative;
-
-  &__logo-box {
-    position: absolute;
-    left: 4rem;
-    top: 4rem;
-  }
-
-  &__logo {
-    height: 3rem;
-  }
-}
-
-
-.heading-primary {
-  backface-visibility: hidden;
-  color: $color-yellow-dark;
-  margin-bottom: 5rem;
-  text-transform: uppercase;
-
-  &--main {
-    display: block;
-    font-weight: 700;
-    font-size: 5rem;
-    letter-spacing: 3rem;
-
-    animation: moveInRight 1s ease-out 2s;
-  }
-
-  &--sub {
-    display: block;
-    font-weight: 400;
-    font-size: 2rem;
-    letter-spacing: 1.7rem;
-
-    animation: moveInLeft 1s ease-out 2s;
-  }
-}
-
-.text-box {
-  position: relative;
-  left: 50%;
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  transform: translate(-50%, -50%);
-}
-
-@keyframes moveInRight {
-  0% { transform: translateX(-8rem); }
-  80% { transform: translateX(1.5rem); }
-  100% { transform: translateX(0); }
-}
-
-@keyframes moveInLeft {
-  0% { transform: translateX(8rem); }
-  80% { transform: translateX(-1.5rem); }
-  100% { transform: translateX(0); }
-}
-
-@keyframes moveInBottom {
-  0% { 
-    transform: translateY(4rem);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.btn {
-  &:link,
-  &:visited {
-    backface-visibility: hidden;
-    border-radius: 10rem;
-    color: $color-gray-dark;
-    font-size: 1.6rem;
-    padding: 1rem 6rem;
-    display: inline-block;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: all .2s;
-    position: relative;
-  }
-
-  &:hover {
-    box-shadow: 0 1rem 2rem $color-primary-dark;
-    transform: translateY(-.3rem);
-    &::after {
-      transform: scaleX(1.6) scaleY(2);
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    box-shadow: 0 1rem 1rem $color-primary-dark;
-    transform: translateY(-.1rem);
-  }
-
-  &::after {
-    content: '';
-    height: 100%;
-    border-radius: 10rem;
-    display: inline-block;
-    position: absolute;
-    width: 100%;
-    top: 0;
-    transition: all .4s;
-    left: 0;
-    z-index: -1;
-  }
-
-  &--yellow {
-    background-color: $color-yellow-dark;
-    &::after {
-      background-color: $color-yellow-dark;
-    }
-  }
-
-  &--animated {
-    animation: moveInBottom 1s ease-out .75s;
-    animation-fill-mode: backwards;
-  }
-}
+@import "pages/home";
 
