Build custom grid with floats

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// COLORS
 $color-primary: rgb(0,145,179);
 $color-primary-light: rgb(0,84,135);
 $color-primary-dark: rgb(0,40,86);
@@ -5,3 +6,7 @@ $color-gray-dark: #777;
 $color-yellow: #FFBF3C;
 $color-yellow-dark: rgb(217,169,0);
 
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
