--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,26 @@ body {
     letter-spacing: 1.7rem;
     animation: moveInLeft 1s ease-out 2s; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #0091b3, #002856);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 40, 86, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
 .btn:link, .btn:visited {
   backface-visibility: hidden;
   border-radius: 10rem;
@@ -107,10 +127,10 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(0, 84, 135, 0.4), rgba(0, 40, 86, 0.6)), url("../img/earth-hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(0, 145, 179, 0.4), rgba(0, 40, 86, 0.6)), url("../img/earth-hero.jpg");
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 10% 100%, 0 90%);
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 10% 100%, 0 90vh);
   position: relative; }
   .header__logo-box {
     position: absolute;
@@ -128,8 +148,7 @@ body {
 
 .row {
   width: 114rem;
-  margin: 0 auto;
-  background-color: #eee; }
+  margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
   .row::after {
@@ -137,8 +156,7 @@ body {
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    float: left;
-    background-color: orangered; }
+    float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
   .row .col-1-of-2 {
@@ -153,3 +171,8 @@ body {
     width: calc(2 * ((100% - 6rem * 3) / 4) + 6rem); }
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 6rem * 3) / 4) + 2 * 6rem); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
