--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,9 @@
 // COLORS
-$color-primary: rgb(0,145,179);
-$color-primary-light: rgb(0,84,135);
+$color-primary-light: rgb(0,145,179);
+$color-primary: rgb(0,84,135);
 $color-primary-dark: rgb(0,40,86);
+
+$color-gray-light-1: #f7f7f7;
 $color-gray-dark: #777;
 $color-yellow: #FFBF3C;
 $color-yellow-dark: rgb(217,169,0);
