--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,7 +8,7 @@
   background-size: cover;
   background-position: top;
 
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 10% 100%, 0 90%);
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 10% 100%, 0 90vh);
   position: relative;
 
   &__logo-box {
