--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,12 @@ $color-gray-dark: #777;
 $color-yellow: #FFBF3C;
 $color-yellow-dark: rgb(217,169,0);
 
+$color-white: #fff;
+$color-black: #000;
+
+// FONT
+$default-font-size: 1.6rem;
+
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
