--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,7 +4,7 @@
     backface-visibility: hidden;
     border-radius: 10rem;
     color: $color-gray-dark;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
     padding: 1rem 6rem;
     display: inline-block;
     text-decoration: none;
@@ -50,5 +50,30 @@
   &--animated {
     animation: moveInBottom 1s ease-out .75s;
     animation-fill-mode: backwards;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+    text-decoration: none;
+    transition: all .2s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-primary-dark, .2);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 .5rem 1rem rbga($color-primary-dark, .2);
+    transform: translateY(0);
   }
 }
