--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,20 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba($color-primary-light, .4),
+    rgba($color-primary-dark, .6)),
+  url('../img/space-4.jpg');
+  background-size: cover;
+  margin-top: -12rem;
+
+  transform: skewY(-7deg);
+
+  & > * {
+    transform: skewY(7deg);
+  }
+}
