Add card front-side styles

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,7 +3,15 @@ $color-primary-light: rgb(0,145,179);
 $color-primary: rgb(0,84,135);
 $color-primary-dark: rgb(0,40,86);
 
+$color-secondary-light: #68D0BC;
+$color-secondary-dark: #3A879B;
+
+$color-tertiary-light: #FFF6A4;
+$color-tertiary-dark: #FF5417;
+
 $color-gray-light-1: #f7f7f7;
+$color-gray-light-2: #eee;
+
 $color-gray-dark: #777;
 $color-yellow: #FFBF3C;
 $color-yellow-dark: rgb(217,169,0);
