--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,8 +6,8 @@ $color-primary-dark: rgb(0,40,86);
 $color-secondary-light: #68D0BC;
 $color-secondary-dark: #3A879B;
 
-$color-tertiary-light: #FFF6A4;
-$color-tertiary-dark: #FF5417;
+$color-tertiary-light: #E22C73;
+$color-tertiary-dark: #83002B;
 
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
