--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 
 $color-gray-dark: #777;
+$color-gray-dark-2: #999;
+
 $color-yellow: #FFBF3C;
 $color-yellow-dark: rgb(217,169,0);
 
