--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     backface-visibility: hidden;
@@ -10,6 +11,10 @@
     text-transform: uppercase;
     transition: all .2s;
     position: relative;
+
+    // changes for button elements
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -21,7 +26,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     box-shadow: 0 1rem 1rem rgba($color-primary-dark, .5);
     transform: translateY(-.1rem);
   }
