--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-gray-light-2: #eee;
 
 $color-gray-dark: #777;
 $color-gray-dark-2: #999;
+$color-gray-dark-3: #333;
 
 $color-yellow: #FFBF3C;
 $color-yellow-dark: rgb(217,169,0);
