--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 
 @import "layout/footer";
 @import "layout/header";
+@import "layout/navigation";
 @import "layout/grid";
 
 @import "pages/home";
