--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+/*
+0 - 600px: Phone
+600 - 900px: Tablet poetrait
+900 - 1200px: Tablet landscape
+1200 - 1800: our normal styles apply to this range
+1800px + : Big desktop
+
+- phone
+- tab-port
+- tab-land
+- big-desktop
+ */
 @keyframes moveInRight {
   0% {
     transform: translateX(-8rem); }
@@ -31,6 +43,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
