--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -24,6 +24,10 @@
 - tab-port
 - tab-land
 - big-desktop
+
+0RDER: Base + typography > general layout + grid > page layout > components
+
+1em = 16px
  */
 
   @mixin respond($breakpoint) {
