--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: $color-gray-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -18,8 +17,12 @@ body {
     font-weight: 700;
     font-size: 5rem;
     letter-spacing: 3rem;
-
     animation: moveInRight 1s ease-out 2s;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-family: 5rem;
+    }
   }
 
   &--sub {
@@ -27,8 +30,12 @@ body {
     font-weight: 400;
     font-size: 2rem;
     letter-spacing: 1.7rem;
-
     animation: moveInLeft 1s ease-out 2s;
+
+    @include respond(phone) {
+      letter-spacing: .5rem;
+      font-family: 5re;
+    }
   }
 }
 
@@ -42,6 +49,14 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all .2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
